# leptostic

first-leptos/: Cargo.toml  index.html  rustfmt.toml
first-leptos/src/: main.rs  rust-toolchain.toml
